tables practically complete

--- a/src/stylesheets/index.html
+++ b/src/stylesheets/index.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Movie Theater</title>
 </head>
 <body>
-    
+    <h1>Weekly Movies</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Movie</th>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Genre</th>
+                <th>Rating</th>
+                <th>Length</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Jurassic World Rebirth</td>
+                <td>7/13</td>
+                <td>7:00 PM</td>
+                <td>Action, Adventure</td>
+                <td>PG-13</td>
+                <td>2 hr 15 min</td>
+            </tr>
+            <tr>
+                <td>Final Destination Bloodlines</td>
+                <td>7/13</td>
+                <td>8:05 PM</td>
+                <td>Thriller</td>
+                <td>R</td>
+                <td>1 hr 50 min</td>
+            </tr>
+            <tr>
+                <td>F1 The Movie</td>
+                <td>7/14</td>
+                <td>6:20 PM</td>
+                <td>Action, Sports Theme</td>
+                <td>PG-13</td>
+                <td>2 hr 35 min</td>
+            </tr>
+            <tr>
+                <td>Karate Kid: Legends</td>
+                <td>7/14</td>
+                <td>1:55 PM</td>
+                <td>Action, Martial Arts, Drama</td>
+                <td>PG-13</td>
+                <td>1 hr 34 min</td>
+            </tr>
+            <tr>
+                <td>M3GAN 2.0</td>
+                <td>7/14</td>
+                <td>10:35 PM</td>
+                <td>Horror</td>
+                <td>PG-13</td>
+                <td>2 hr 0 min</td>
+            </tr>
+            <tr>
+                <td>Lilo & Stitch</td>
+                <td>7/14</td>
+                <td>12:20 PM</td>
+                <td>Adventure, Comedy, Family</td>
+                <td>PG</td>
+                <td>1 hr 48 min</td>
+            </tr>
+            <tr>
+                <td>Mission: Impossible | The Final Reckoning</td>
+                <td>7/15</td>
+                <td>6:00 PM</td>
+                <td>Action, Adventure</td>
+                <td>PG-13</td>
+                <td>2 hr 49 min</td>
+            </tr>
+            <tr>
+                <td>28 Years Later</td>
+                <td>7/15</td>
+                <td>9:55 PM</td>
+                <td>Horror</td>
+                <td>R</td>
+                <td>1 hr 55 min</td>
+            </tr>
+        </tbody>
+
+        
+
+    <footer>Sources: <a href="https://www.cinemark.com/movies/28-years-later?showDate=2025-07-15"target="_blank">Current Movies</a></footer>
 </body>
 </html>
