--- a/src/stylesheets/index.html
+++ b/src/stylesheets/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Weekly Movies</h1>
+    <div class ="table-container">
     <table>
         <thead>
             <tr>
@@ -84,10 +85,12 @@
                 <td>R</td>
                 <td>1 hr 55 min</td>
             </tr>
+    </table>
+    </div>
         </tbody>
 
-        
 
-    <footer>Sources: <a href="https://www.cinemark.com/movies/28-years-later?showDate=2025-07-15"target="_blank">Current Movies</a></footer>
+
+    <footer>Sources: <a href="https://www.cinemark.com/movies/now-playing">Current Movies</a></footer>
 </body>
 </html>
