--- a/src/stylesheets/index.html
+++ b/src/stylesheets/index.html
@@ -10,7 +10,19 @@
     <h1>Weekly Movies</h1>
     <div class ="table-container">
     <table>
+        <caption>Schedule</caption>
+        <colgroup>
+            <col style="width: 30%;"><!--Movie-->
+            <col style="width: 15%;"><!--Day-->
+            <col style="width: 15%;"><!--Time-->
+            <col style="width: 20%;"><!--Genre-->
+            <col style="width: 10%;"><!--Rating-->
+            <col style="width: 10%;"><!--Length-->
+        </colgroup>
         <thead>
+            <tr>
+                <th colspan="6">From July 13 - July 15</th>
+            </tr>
             <tr>
                 <th>Movie</th>
                 <th>Day</th>
@@ -23,7 +35,7 @@
         <tbody>
             <tr>
                 <td>Jurassic World Rebirth</td>
-                <td>7/13</td>
+                <td rowspan="2">7/13</td>
                 <td>7:00 PM</td>
                 <td>Action, Adventure</td>
                 <td>PG-13</td>
@@ -31,7 +43,6 @@
             </tr>
             <tr>
                 <td>Final Destination Bloodlines</td>
-                <td>7/13</td>
                 <td>8:05 PM</td>
                 <td>Thriller</td>
                 <td>R</td>
@@ -39,7 +50,7 @@
             </tr>
             <tr>
                 <td>F1 The Movie</td>
-                <td>7/14</td>
+                <td rowspan="4">7/14</td>
                 <td>6:20 PM</td>
                 <td>Action, Sports Theme</td>
                 <td>PG-13</td>
@@ -47,7 +58,6 @@
             </tr>
             <tr>
                 <td>Karate Kid: Legends</td>
-                <td>7/14</td>
                 <td>1:55 PM</td>
                 <td>Action, Martial Arts, Drama</td>
                 <td>PG-13</td>
@@ -55,7 +65,6 @@
             </tr>
             <tr>
                 <td>M3GAN 2.0</td>
-                <td>7/14</td>
                 <td>10:35 PM</td>
                 <td>Horror</td>
                 <td>PG-13</td>
@@ -63,7 +72,6 @@
             </tr>
             <tr>
                 <td>Lilo & Stitch</td>
-                <td>7/14</td>
                 <td>12:20 PM</td>
                 <td>Adventure, Comedy, Family</td>
                 <td>PG</td>
@@ -71,7 +79,7 @@
             </tr>
             <tr>
                 <td>Mission: Impossible | The Final Reckoning</td>
-                <td>7/15</td>
+                <td rowspan="2">7/15</td>
                 <td>6:00 PM</td>
                 <td>Action, Adventure</td>
                 <td>PG-13</td>
@@ -79,18 +87,23 @@
             </tr>
             <tr>
                 <td>28 Years Later</td>
-                <td>7/15</td>
                 <td>9:55 PM</td>
                 <td>Horror</td>
                 <td>R</td>
                 <td>1 hr 55 min</td>
             </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="6">All movies are subject to change. Please check the website for the latest schedule.</td>
+            </tr>
+        </tfoot>
     </table>
     </div>
-        </tbody>
+        
 
 
 
-    <footer>Sources: <a href="https://www.cinemark.com/movies/now-playing">Current Movies</a></footer>
+    <footer>Sources: <a href="https://www.cinemark.com/movies/now-playing"target="_blank">Current Movies</a></footer>
 </body>
 </html>
