--- a/src/stylesheets/index.html
+++ b/src/stylesheets/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Movie Theater</title>
+    <header>
+        <a href="#">Movies</a>
+        <a href="form.html">Tickets</a>
+        <a href="seat.html">Availability</a>
+    </header>
+    <title>Current Movies</title>
 </head>
 <body>
     <h1>Weekly Movies</h1>
