--- a/src/stylesheets/seat.html
+++ b/src/stylesheets/seat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="seat.css">
-    <header></header>
+    <header>
         <a href="index.html">Movies</a>
         <a href="form.html">Tickets</a>
         <a href="#">Availability</a>
@@ -12,6 +12,7 @@
     <title>Seat Availability</title>
 </head>
 <body>
+    <h1>Available Seating</h1>
     
 </body>
 </html>
