moved html+deleted folder

--- a/src/form.html
+++ b/src/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="stylesheets/form.css">
     <header>
         <a href="index.html">Movies</a>
         <a href="#">Tickets</a>
