--- a/src/seat.html
+++ b/src/seat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="seat.css">
+    <link rel="stylesheet" href="stylesheets/seat.css">
     <header>
         <a href="index.html">Movies</a>
         <a href="form.html">Tickets</a>
