--- a/src/form.html
+++ b/src/form.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/form.css">
-    <header>
+    <title>Ticket Booking</title>
+</head>
+<body>
+     <header>
         <a href="index.html">Movies</a>
         <a href="#">Tickets</a>
         <a href="seat.html">Availability</a>
     </header>
-    <title>Ticket Booking</title>
-</head>
-<body>
     <h1>Ticket Booking</h1>
     <form action="get">
         <label for="movie">Select Movie:</label>
@@ -36,19 +36,26 @@
         <br>
         <br>
         <label for="seating_placement">Seats:</label>
-        <input type="radio" name="seating_placement" value="front" checked>Front Row<br><br>
-        <input type="radio" name="seating_placement" value="middle"checked>Middle Row<br><br>
-        <input type="radio" name="seating_placement" value="back"checked>Back Row<br><br>
-        <input type="radio" name="seating_placement" value="vip"checked>VIP Seats<br><br>
-        <input type="radio" name="seating_placement" value="accessible"checked>Accessible Seating<br><br>
+        <br>
+        <div class="twonext">
+        <input type="radio" name="seating_placement" value="front" checked>Front Row
+        <input type="radio" name="seating_placement" value="middle"checked>Middle Row
+        </div>
+        <div class="twonext">
+        <input type="radio" name="seating_placement" value="back"checked>Back Row
+        <input type="radio" name="seating_placement" value="vip"checked>VIP Seats
+        </div>
+        <div class="middleplace">
+        <input type="radio" name="seating_placement" value="accessible"checked>Accessible Seating
+        </div>
         <br>
         <br>
         <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
         <br>
         <br>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your name" required>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
         <br>
         <br>
         <label for="phone">Phone Number:</label>
@@ -66,8 +73,10 @@
             <option value="paypal">PayPal</option>
             <option value="apple_pay">Apple Pay</option>
             <option value="google_pay">Google Pay</option>
-            
-
+        </select>
+        <br>
+        <br>
+        <br>
         <button type="submit">Book Tickets</button>
         <br>
         <button type="reset">Reset</button>
