FORM IS FINALLY DONEEEEE

--- a/src/form.html
+++ b/src/form.html
@@ -76,6 +76,8 @@
         </select>
         <br>
         <br>
+        <label for="comments">Comments:</label>
+        <textarea id="comments" name="comments" rows="5" cols="30" placeholder="Any additional requests or comments"></textarea>
         <br>
         <button type="submit">Book Tickets</button>
         <br>
