SEATS ARE DONEEEE

--- a/src/seat.html
+++ b/src/seat.html
@@ -28,7 +28,7 @@
 
     <h2>Seating Legend</h2>
     <ul>
-        <li><strong>VIP:</strong> Premium seating with extra comfort and extra seating features.</li>
+        <li><strong>VIP:</strong> Premium seating with extra comfort and added seating features.</li>
         <li><strong>Unavailable:</strong> Seats that are currently not available for booking.</li>
         <li><strong>Available:</strong> Seats that can be booked for the movie.</li>
         <li><strong>Accessible:</strong> Special seating designed for accessibility needs.</li>
